# hexlet-git

./: .gitignore  INFO.md  Makefile  README.md  pyproject.toml
.github/workflows/: hello-world.yml
scripts/: test.py
