[tool.poetry]
name = "hexlet-git"
version = "0.1.0"
description = ""
authors = ["Dmitry_Perexozhev <perexozhev99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
say-hello = "scripts.test:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
